Fix spec compliance of current iteration calculation.

Bug: 827577
Change-Id: I7f8218c5c71d74b7b18dcbf6fdad43f7346dfeab
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1566023
Commit-Queue: Kevin Ellis <kevers@chromium.org>
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#650935}
Former-commit-id: ed6681f52370bfaaa8de18358c1054d7a5005698